
----------------------------------------------------------------------
 1.9.7
----------------------------------------------------------------------

 - Updated Swedish translation (Christian Rose).
 - Updated Spanish translation (Pablo del Campo).
 - Added /GETSTR and /GETINT.
 - Misc. serverlist bug fixes (Shaun Guth).
 - Added xchat_get_info("network") to plugin interface.
 - Fixed changing tabs via keyboard.
 - Added a few keyboard accelerators to the menubar.
 - Fixed close-tab-0 crash.
 - Fixed /unload <plugin_file_name> crash.
 - Fixed userlist popup menu disappearing on button-release.
 - Added hack to make plugins possible on win32.
 - Keep the leading ":" in server events passed to plugins.
 - Added xchat_hook_fd to plugin interface.
 - Fixed color paste.
 - Added a character set selector to the serverlist.
 - Send DCC filenames in system encoding (gets converted if a charset
   if chosen in the serverlist).
 - Fixed possible Search Text crash.
 - 


----------------------------------------------------------------------
 1.9.6
----------------------------------------------------------------------

 - Updated Spanish translation (Pablo del Campo).
 - Added Estonian translation (Ilmar Kerm).
 - Made switching to dialog tabs faster:
   * Draw xtext only once when switching to a dialog tab.
   * Do not recalculate the tinted-transparency.
 - Fixed another text-off-the-bottom bug.
 - Fixed background color other than black not working.
 - Fixed dialog windows not being logged (Joanne Hunter).
 - Fixed topic entry box going blank bug.
 - Added Insert-color-code and encoding submenu in the bottom-right
   button.
 - Apply more settings without needing a restart:
   * Background image.
   * Time stamp text on/off.
   * Palette changes.
 - Implemented %n for log-filename-mask.
 - Reconfigured the menubar a bit.
 - Validate inbound utf8 text to avoid reading beyond buffer and
   fall back to iso-8859-1.
 - win32 compile fixes.