@@ -11,6 +11,7 @@
  - Added /GETSTR and /GETINT.
  - Misc. serverlist bug fixes (Shaun Guth).
  - Added xchat_get_info("network") to plugin interface.
+ - Added xchat_hook_fd to plugin interface.
  - Fixed changing tabs via keyboard.
  - Added a few keyboard accelerators to the menubar.
  - Fixed close-tab-0 crash.
@@ -18,12 +19,14 @@
  - Fixed userlist popup menu disappearing on button-release.
  - Added hack to make plugins possible on win32.
  - Keep the leading ":" in server events passed to plugins.
- - Added xchat_hook_fd to plugin interface.
  - Fixed color paste.
  - Added a character set selector to the serverlist.
  - Send DCC filenames in system encoding (gets converted if a charset
-   if chosen in the serverlist).
+   is chosen in the serverlist).
  - Fixed possible Search Text crash.
+ - Removed --enable-japanese-conv configure option (isn't this
+   superseded by the new charset selector?).
+ - Use --enable-openssl by default.
  - 
 
 
